done with the UI part of it
